# egp-utils

./: .gitignore  base_validator.py  pyproject.toml  reference.py  requirements.txt  text_token.py
.github/workflows/: python-package.yml
egp_utils/: __init__.py  base_validator.py  common.py  egp_logo.py  packed_store.py  store.py  text_token.py
egp_utils/docs/: store.md
tests/: test_code_quality.py  test_store.py
