[tool.black]
line-length = 140
target-version = ['py311']

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "egp-utils"
version = "0.0.1.dev12"
authors = [
  { name="Shaped Sundew" },
]
description = "Utillities used in Erasmus Genetic Programming packages."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]

[project.urls]
"Homepage" = "https://github.com/Shapedsundew9/egp-utils"
"Bug Tracker" = "https://github.com/Shapedsundew9/egp-utils/issues"